# game-of-life-hpc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  seed_glider.txt  slurm_submit.peta4-cclake
cmake/: ClangFormat.cmake  Doxygen.cmake  Testing.cmake
docs/html/: index.html
prof/: prof_count_neighbours  prof_count_neighbours.txt  prof_simulation  prof_simulation.txt  time_1d_decomp_1rank.txt  time_1d_decomp_2rank.txt  time_1d_decomp_4rank.txt  time_2d_decomp_4rank.txt  time_count_neighbours.txt  time_count_neighbours_transpose.txt  time_hybrid_r4_t4.txt  time_simulation.txt
prof/hpc/: time_hybrid_r16_t16.txt  time_hybrid_r16_t32.txt  time_hybrid_r16_t48.txt  time_hybrid_r25_t25.txt  time_hybrid_r25_t50.txt  time_hybrid_r36_t36.txt  time_hybrid_r49_t49.txt  time_hybrid_r4_t1.txt  time_hybrid_r4_t12.txt  time_hybrid_r4_t16.txt  time_hybrid_r4_t2.txt  time_hybrid_r4_t32.txt  time_hybrid_r4_t4.txt  time_hybrid_r4_t8.txt  time_hybrid_r9_t18.txt  time_hybrid_r9_t27.txt  time_hybrid_r9_t36.txt  time_hybrid_r9_t45.txt  time_hybrid_r9_t54.txt  time_hybrid_r9_t9.txt
report/: Biblio.bib  c2_assessment_jh2284.tex
src/: CMakeLists.txt  hybrid.cpp  main.cpp  parallel.cpp  parallel_2d.cpp  prof_count_neighbours.cpp  prof_simulation.cpp  run_dd1.cpp  run_dd2.cpp  run_hybrid.cpp  run_omp.cpp  run_single.cpp  test_threading.cpp  threading.cpp  time_1d_decomp.cpp  time_2d_decomp.cpp  time_count_neighbours.cpp  time_dd1.cpp  time_dd2.cpp  time_hybrid.cpp  time_simulation.cpp  time_single.cpp
src/conway/: CMakeLists.txt  conway.cpp  matrix.cpp  parallel.cpp  world.cpp
src/conway/include/: conway.h  matrix.h  parallel.h  world.h
src/timing/: CMakeLists.txt  timing.cpp
test/: CMakeLists.txt  test_dd1.cpp  test_dd2.cpp  test_hybrid.cpp  test_matrix.cpp  test_omp.cpp  test_parallel.cpp  test_parallel_2d.cpp  test_threading.cpp  test_world.cpp
test/test_data/: input_file_1.txt  input_file_2.txt  output_file_2.txt
